[package]
name = "progressive"
version = "0.1.0"
authors = ["Paul Lange <palango@gmx.de>"]
description = "A rust library for showing progress of iterators and loops"

documentation = "https://palango.github.io/progressive/progressive/index.html"
homepage = "https://github.com/palango/progressive"
repository = "https://github.com/palango/progressive"

readme = "README.md"
license = "MIT/Apache-2.0"

keywords = ["iterator", "progress"]

[dependencies]
clippy = {version = "0.0.*", optional = true}

[features]
default=[]
